# love-calculator

./: CMakeLists.txt  CMakePresets.json  Dockerfile  compatibilita_project.cpp  compatibilita_project.h
controllers/: CalcolatoreController.h
html/: index.html  style.css
models/: CompatibilitaEngine.h
